[package]
name = "ising"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

getrandom = { version = "0.2.8", features = ["js"] }
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
log = "0.4.17"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
wasm-bindgen-futures = "0.4.34"
gloo = { version = "0.8.0", features = ["futures"] }
rand = { version = "0.8.5", features = ["small_rng"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"

[dev-dependencies]
base64 = "0.21.0"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'HtmlCanvasElement',
  'Window',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'ImageData',
]
